# zortcoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CENTOS7_AUTO_INSTALLER.sh  CNAME  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  UBUNTU_AUTO_INSTALLER.sh  autogen.sh  configure.ac  libzortcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json  zortcoin.sln  zortcoin_config.h
ci/: test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp  zortcoin-cli.bash-completion  zortcoin-qt.pro  zortcoin-tx.bash-completion  zortcoind.bash-completion
depends/: README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md  zortcoin-conf.md
doc/man/: Makefile.am  zortcoin-cli.1  zortcoin-qt.1  zortcoin-tx.1  zortcoin-wallet.1  zortcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  (+155 more)
(+1132 files in other folders)
