dist_man1_MANS=

if BUILD_ZORTCOInD
  dist_man1_MANS+=zortcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=zortcoin-qt.1
endif

if BUILD_ZORTCOIn_CLI
  dist_man1_MANS+=zortcoin-cli.1
endif

if BUILD_ZORTCOIn_TX
  dist_man1_MANS+=zortcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_ZORTCOIn_WALLET
  dist_man1_MANS+=zortcoin-wallet.1
endif
endif
